// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon displays active user image correctly 1`] = `
<View
  accessibilityRole="image"
  style={
    [
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "borderBottomLeftRadius": 9999,
            "borderBottomRightRadius": 9999,
            "borderTopLeftRadius": 9999,
            "borderTopRightRadius": 9999,
          },
          {
            "borderBottomWidth": 3,
            "borderLeftWidth": 3,
            "borderRightWidth": 3,
            "borderTopWidth": 3,
          },
          {
            "borderBottomColor": "#74AC00",
            "borderLeftColor": "#74AC00",
            "borderRightColor": "#74AC00",
            "borderTopColor": "#74AC00",
          },
          {
            "height": 40,
            "width": 40,
          },
        ],
      ],
    ]
  }
  testID="UserIcon.photo"
>
  <View
    accessibilityIgnoresInvertColors={true}
    source={
      {
        "cachePolicy": "discNoCacheControl",
        "resizeMode": "cover",
        "transitionDuration": 0,
        "url": "https://loremflickr.com/640/480?lock=4455548378415104",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`UserIcon displays small user image correctly 1`] = `
<View
  accessibilityRole="image"
  style={
    [
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "borderBottomLeftRadius": 9999,
            "borderBottomRightRadius": 9999,
            "borderTopLeftRadius": 9999,
            "borderTopRightRadius": 9999,
          },
          {
            "height": 22,
            "width": 22,
          },
        ],
      ],
    ]
  }
  testID="UserIcon.photo"
>
  <View
    accessibilityIgnoresInvertColors={true}
    source={
      {
        "cachePolicy": "discNoCacheControl",
        "resizeMode": "cover",
        "transitionDuration": 0,
        "url": "https://loremflickr.com/640/480?lock=4455548378415104",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`UserIcon displays user image correctly 1`] = `
<View
  accessibilityRole="image"
  style={
    [
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "borderBottomLeftRadius": 9999,
            "borderBottomRightRadius": 9999,
            "borderTopLeftRadius": 9999,
            "borderTopRightRadius": 9999,
          },
          {
            "height": 40,
            "width": 40,
          },
        ],
      ],
    ]
  }
  testID="UserIcon.photo"
>
  <View
    accessibilityIgnoresInvertColors={true}
    source={
      {
        "cachePolicy": "discNoCacheControl",
        "resizeMode": "cover",
        "transitionDuration": 0,
        "url": "https://loremflickr.com/640/480?lock=4455548378415104",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;
